sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:15: error: not found: value n
   setValue(n,v)
            ^